// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessage > renders with as correctly 1`] = `
"<section data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`ChatMessage > renders with avatar correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <div data-slot="leading" class="inline-flex items-center justify-center min-h-6 mt-2"><span data-slot="root" class="air-secondary-accent inline-flex items-center justify-center select-none rounded-full align-middle bg-(--ui-color-base-8) ring ring-(--ui-color-base-7) size-[32px] text-(length:--ui-font-size-sm)/(--ui-font-line-height-reset) shrink-0"><img src="https://github.com/bitrix24.png" width="32" height="32" data-slot="image" class="h-full w-full rounded-[inherit] object-cover"></span></div>
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with b24ui correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with class correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with compact correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-3">
  <div data-slot="container" class="relative flex items-start gap-1.5 pb-3">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-2 py-1 rounded-lg min-h-8">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with content correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6" content="Hello, how are you?">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with content slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Content slot</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with icon correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <div data-slot="leading" class="inline-flex items-center justify-center min-h-6 mt-2"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="shrink-0 text-(--ui-color-design-plain-content-icon-secondary) size-8">
        <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
      </svg></div>
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with parts correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with role assistant correctly 1`] = `
"<article data-role="assistant" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with side right correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start ltr:justify-end ms-auto max-w-[75%] gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant event correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-default ring ring-default px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant message correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-inverted text-inverted px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant system correctly 1`] = `
"<article data-role="user" data-slot="root" class="group/message relative w-full scroll-mt-4 sm:scroll-mt-6">
  <div data-slot="container" class="relative flex items-start gap-3 pb-8">
    <!--v-if-->
    <div data-slot="content" class="relative text-pretty min-w-0 *:first:mt-0 *:last:mb-0 bg-elevated/50 px-4 py-3 rounded-lg min-h-12">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;
